# assistant_agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: lint.yml  test.yml
docs/: models.md  repository.md
src/assistant_agent/models/: task.py
src/assistant_agent/repository/: __init__.py  base.py  json_repository.py
src/assistant_agent/utils/: __init__.py  data_parser.py  date_parser.py
tests/assistant_agent/models/: test_task.py
tests/assistant_agent/models/task/: test_validators.py
tests/assistant_agent/repository/: test_base.py  test_json_repository.py
tests/assistant_agent/utils/: test_date_parser.py
