[project]
name = "assistant-agent"
version = "0.1.0"
description = "Small project for master's degree thesis at Universidad Politecnica de Madrid"
readme = "README.md"
authors = [
    { name = "Eisler Aguilar", email = "39389514+Eisler18@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
assistant-agent = "assistant_agent:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"
