[project]
name = "assistant-agent"
version = "0.1.0"
description = "Small project for master's degree thesis at Universidad Politecnica de Madrid"
readme = "README.md"
authors = [
    { name = "Eisler Aguilar", email = "39389514+Eisler18@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dateparser>=1.3.0",
    "gradio>=6.9.0",
    "langchain-core>=1.2.20",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
]

[project.scripts]
assistant-agent = "assistant_agent:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]
