[project]
name = "assistant-agent"
version = "0.1.0"
description = "Small project for master's degree thesis at Universidad Politecnica de Madrid"
readme = "README.md"
authors = [
    { name = "Eisler Aguilar", email = "39389514+Eisler18@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "dateparser>=1.3.0",
    "gradio>=6.9.0",
    "langchain-core>=1.2.20",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[project.scripts]
assistant-agent = "assistant_agent:main"

[build-system]
requires = ["uv_build>=0.10.12,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
]

[tool.pylint.messages_control]
disable = [
    "C0111"  # missing-docstring
]

[tool.pylint.format]
max-line-length = 100
indent-string = "  "

[tool.pylint.design]
max-attributes = 10
max-locals = 15

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "x", "y", "z"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src/assistant_agent --cov-report=xml --cov-report=html --cov-report=term-missing"
markers = [
    "unit: unit tests",
    "integration: integration tests",
]

[tool.coverage.run]
omit = ["*/__init__.py"]

